--- a/src/components/header/Header.astro
+++ b/src/components/header/Header.astro
@@ -41,10 +41,10 @@ const navLinks = [
 const { pathname } = Astro.url;
 ---
 
-<header class="space-y-2 py-2">
+<header>
   <h2 class="sr-only">Website Header</h2>
 
-  <div class="max-w-7xl mx-auto px-4">
+  <div class="max-w-7xl mx-auto p-4 space-y-4">
     <nav>
       <ul class="flex justify-end space-x-2">
         <li>
