--- a/src/components/header/Header.astro
+++ b/src/components/header/Header.astro
@@ -44,7 +44,7 @@ const { pathname } = Astro.url;
 <header>
   <h2 class="sr-only">Website Header</h2>
 
-  <div class="max-w-7xl mx-auto p-4 space-y-4">
+  <div class="container p-4 space-y-4">
     <nav>
       <ul class="flex justify-end space-x-2">
         <li>
