--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,85 @@
 ---
-
+import MainLayout from "@layouts/MainLayout.astro";
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+<MainLayout>
+  <section class="container mt-8">
+    <div class="bg-primary-50 flex">
+      <!-- Left -->
+      <div class="p-4 w-2/3">
+        <header class="flex justify-between items-center">
+          <div class="border relative">
+            <div
+              class="bg-primary bg-opacity-50 absolute w-full h-full translate-x-1/4 rounded-md overflow-hidden"
+            >
+              <p inert class="sr-only">test</p>
+            </div>
+
+            <div
+              class="relative bg-gradient-to-r px-4 py-2 from-secondary to-primary rounded-md overflow-hidden"
+            >
+              <h2 class="text-white">新闻公告</h2>
+            </div>
+          </div>
+
+          <div>
+            <a href="#">更多 &gt;</a>
+          </div>
+        </header>
+
+        <figure class="relative rounded-lg overflow-hidden">
+          <div class="absolute w-full h-full bg-white"></div>
+
+          <figcaption class="relative p-8">
+            <div
+              class="mt-12 mb-24 rounded-lg text-center w-fit p-4 space-y-2 bg-primary text-white"
+            >
+              <p class="text-3xl">2023</p>
+              <p class="text-xl">08-16</p>
+            </div>
+
+            <h3 class="text-xl font-bold">
+              中国道教协会第十五届玄门讲经活动开幕
+            </h3>
+
+            <p class="mt-4">
+              2023年8月7日上午，中国道教协会第十五届玄门讲经活动开幕式在山西太原举行。中央统战部有关部门负责同志，山西省委统战部副部长、省宗教局局长黄杰，太原市、迎泽区、万柏林区等相关党政部门领导出席开幕式
+            </p>
+          </figcaption>
+        </figure>
+      </div>
+
+      <!-- Right -->
+      <div class="w-1/3 rounded-lg overflow-hidden bg-secondary p-4 text-white">
+        <div class="pb-[30%] bg-primary rounded-lg"></div>
+
+        <article class="py-4">
+          <h3 class="line-clamp-1 text-xl font-bold">
+            第四届道德经文化及应用博士论坛
+          </h3>
+          <p class="line-clamp-2">
+            7月8日至9日，“明白四达——第四届道德经文化及应用博士学术论坛暨袁州首届中华优秀传统文化艺术节”在江西宜春举行。本次论坛由中国道教协会、江西省宜春市人民政府主办，江西省宜春市文化广电旅游局、江西省宜春市宜丰县人民政府承办，江西省宜春市道教协会协办。
+          </p>
+        </article>
+
+        <hr />
+
+        <ul class="mt-4 space-y-2">
+          {
+            [...Array(5)].map(() => {
+              return (
+                <li class="flex items-center">
+                  <div class="w-2 h-2 bg-primary rounded-full" />
+                  <p class="flex-1 px-4 line-clamp-1">
+                    “明白四达——第四届道德经文化及应用博士学术论坛暨袁州首届中华优秀传统文化艺术节”
+                  </p>
+                  <p class="shrink-0">2023-07-06</p>
+                </li>
+              );
+            })
+          }
+        </ul>
+      </div>
+    </div>
+  </section>
+</MainLayout>
