--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,11 +4,13 @@ import MainLayout from "@layouts/MainLayout.astro";
 
 <MainLayout>
   <section class="container mt-8">
-    <div class="bg-primary-50 flex">
+    <div
+      class="bg-gradient-to-b from-primary-50 via-primary-50 to-primary-200 flex"
+    >
       <!-- Left -->
       <div class="p-4 w-2/3">
         <header class="flex justify-between items-center">
-          <div class="border relative">
+          <div class="relative">
             <div
               class="bg-primary bg-opacity-50 absolute w-full h-full translate-x-1/4 rounded-md overflow-hidden"
             >
@@ -79,6 +81,91 @@ import MainLayout from "@layouts/MainLayout.astro";
             })
           }
         </ul>
+      </div>
+    </div>
+  </section>
+
+  <section class="container">
+    <h2 class="sr-only">中国道教协会第十五届玄门讲经活动开幕</h2>
+
+    <div class="bg-gradient-to-b from-primary-50 via-primary-50 to-primary-200">
+      <div class="h-24 bg-green-500"></div>
+
+      <div class="flex py-4">
+        <!-- Left -->
+        <section class="w-2/3 px-4">
+          <header class="flex justify-between">
+            <div class="relative w-fit">
+              <div
+                class="bg-primary bg-opacity-50 absolute w-full h-full translate-x-1/4 rounded-md overflow-hidden"
+              >
+                <p inert class="sr-only">test</p>
+              </div>
+
+              <div
+                class="relative bg-gradient-to-r px-4 py-2 from-secondary to-primary rounded-md overflow-hidden"
+              >
+                <h3 class="text-white">新闻公告</h3>
+              </div>
+            </div>
+
+            <div>
+              <a href="#">更多 &gt;</a>
+            </div>
+          </header>
+
+          <ul>
+            {
+              [...Array(5)].map(() => {
+                return (
+                  <li class="flex items-center">
+                    <div class="text-center -space-y-1.5 px-2">
+                      <p class="text-2xl">2023</p>
+                      <p class="text-gray-500">08-08</p>
+                    </div>
+
+                    <div class="w-0.5 h-4 bg-primary rounded-full" />
+
+                    <article class="pl-8 py-4 border-b border-primary flex-1">
+                      <h4 class="text-lg">天人合一与生态文明建设</h4>
+                      <p class="text-sm text-gray-500">
+                        “明白四达——第四届道德经文化及应用博士学术论坛暨袁州首届中华优秀传统文化艺术节”
+                      </p>
+                    </article>
+                  </li>
+                );
+              })
+            }
+          </ul>
+        </section>
+
+        <!-- Right -->
+        <section class="w-1/3 pr-4">
+          <header class="relative w-fit">
+            <div
+              class="bg-green-500 bg-opacity-50 absolute w-full h-full translate-x-1/4 rounded-md overflow-hidden"
+            >
+              <p inert class="sr-only">test</p>
+            </div>
+
+            <div
+              class="relative bg-gradient-to-r px-4 py-2 from-green-400 to-green-500 rounded-md overflow-hidden"
+            >
+              <h3 class="text-white">新闻公告</h3>
+            </div>
+          </header>
+
+          <nav class="grid grid-cols-3 gap-4 mt-8">
+            <div class="bg-green-500 h-24 col-span-3 rounded-lg"></div>
+
+            <div class="bg-primary h-24 col-span-2 rounded-lg"></div>
+
+            <div class="bg-blue-400 h-24 rounded-lg"></div>
+            <div class="bg-blue-600 h-24 rounded-lg"></div>
+            <div class="bg-blue-600 h-24 rounded-lg"></div>
+            <div class="bg-blue-600 h-24 rounded-lg"></div>
+          </nav>
+        </section>
       </div>
     </div>
   </section>
