--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -140,7 +140,7 @@ import MainLayout from "@layouts/MainLayout.astro";
         </section>
 
         <!-- Right -->
-        <section class="w-1/3 pr-4">
+        <section class="w-1/3 px-4">
           <header class="relative w-fit">
             <div
               class="bg-green-500 bg-opacity-50 absolute w-full h-full translate-x-1/4 rounded-md overflow-hidden"
