--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -241,4 +241,54 @@ import SearchIcon from "@assets/SearchIcon.astro";
       </ul>
     </div>
   </section>
+
+  <section class="container">
+    <div
+      class="p-4 bg-gradient-to-b from-primary-50 via-primary-50 to-primary-200"
+    >
+      <header class="flex items-center">
+        <div class="relative w-fit">
+          <div
+            class="bg-primary bg-opacity-50 absolute w-full h-full translate-x-1/4 rounded-md overflow-hidden"
+          >
+            <p inert class="sr-only">test</p>
+          </div>
+
+          <div
+            class="relative bg-gradient-to-r px-4 py-2 from-secondary to-primary rounded-md overflow-hidden"
+          >
+            <h3 class="text-white">道教文化</h3>
+          </div>
+        </div>
+
+        <ul class="flex text-gray-500 ml-16 space-x-4">
+          <li class="text-primary">道教仪范</li>
+          <li>道教养生</li>
+          <li>道教经典</li>
+          <li>祖师仙真</li>
+          <li>神仙传说</li>
+        </ul>
+
+        <div class="ml-auto">
+          <a href="#">更多 &gt;</a>
+        </div>
+      </header>
+
+      <div class="mt-4">
+        <ul class="grid grid-cols-2 w-5/6 mx-auto">
+          {
+            [...Array(12)].map(() => {
+              return (
+                <li class="flex items-center space-x-2 p-4">
+                  <div class="w-3 h-3 bg-gradient-to-r from-primary-400 to-primary rounded-full" />
+
+                  <p>皈依道、经、师三宝的含义</p>
+                </li>
+              );
+            })
+          }
+        </ul>
+      </div>
+    </div>
+  </section>
 </MainLayout>
