--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -244,7 +244,7 @@ import SearchIcon from "@assets/SearchIcon.astro";
 
   <section class="container">
     <div
-      class="p-4 bg-gradient-to-b from-primary-50 via-primary-50 to-primary-200"
+      class="p-4 bg-gradient-to-b from-primary-50 rounded-lg overflow-hidden via-primary-50 to-primary-200"
     >
       <header class="flex items-center">
         <div class="relative w-fit">
@@ -288,6 +288,80 @@ import SearchIcon from "@assets/SearchIcon.astro";
             })
           }
         </ul>
+      </div>
+    </div>
+  </section>
+
+  <section class="container mt-4">
+    <div
+      class="p-4 bg-gradient-to-b from-primary-50 rounded-lg overflow-hidden via-primary-50 to-primary-200"
+    >
+      <header>
+        <div class="relative w-fit">
+          <div
+            class="bg-primary bg-opacity-50 absolute w-full h-full translate-x-1/4 rounded-md overflow-hidden"
+          >
+            <p inert class="sr-only">test</p>
+          </div>
+
+          <div
+            class="relative bg-gradient-to-r px-4 py-2 from-secondary to-primary rounded-md overflow-hidden"
+          >
+            <h3 class="text-white">宫观介绍</h3>
+          </div>
+        </div>
+      </header>
+
+      <div class="flex mt-4">
+        <!-- Left -->
+        <div class="w-2/3 pr-4 flex flex-col">
+          <!-- Header -->
+          <div class="flex space-x-8">
+            <!-- Select -->
+            <div
+              class="py-2 w-40 px-4 border-2 border-primary rounded-full bg-primary-50"
+            >
+              <select class="bg-primary-50">
+                <option>全部</option>
+                <option>全部</option>
+                <option>全部</option>
+                <option>全部</option>
+                <option>全部</option>
+              </select>
+            </div>
+
+            <!-- Input -->
+            <div
+              class="border-2 border-primary bg-primary-50 px-4 py-2 rounded-full flex-1 flex"
+            >
+              <input
+                placeholder="按宫观名称搜索"
+                class="bg-primary-50 flex-1"
+              />
+              <p>查询</p>
+            </div>
+          </div>
+
+          <!-- Map -->
+          <div class="bg-primary flex-1 mt-4 rounded-lg"></div>
+        </div>
+
+        <!-- Right -->
+        <div class="w-1/3 p-8 bg-secondary rounded-lg overflow-hidden">
+          <ul>
+            {
+              [...Array(8)].map(() => {
+                return (
+                  <li class="flex items-center space-x-2 p-4 text-white">
+                    <div class="w-3 h-3 bg-gradient-to-r from-primary-400 to-primary rounded-full" />
+
+                    <p>皈依道、经、师三宝的含义</p>
+                  </li>
+                );
+              })
+            }
+          </ul>
+        </div>
       </div>
     </div>
   </section>
