--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -413,4 +413,34 @@ import SearchIcon from "@assets/SearchIcon.astro";
       </div>
     </div>
   </section>
+
+  <section class="container mt-4">
+    <div
+      class="p-4 bg-gradient-to-b from-primary-50 rounded-lg overflow-hidden via-primary-50 to-primary-200"
+    >
+      <header>
+        <div class="relative w-fit">
+          <div
+            class="bg-primary bg-opacity-50 absolute w-full h-full translate-x-1/4 rounded-md overflow-hidden"
+          >
+            <p inert class="sr-only">test</p>
+          </div>
+
+          <div
+            class="relative bg-gradient-to-r px-4 py-2 from-secondary to-primary rounded-md overflow-hidden"
+          >
+            <h3 class="text-white">道教视频</h3>
+          </div>
+        </div>
+      </header>
+
+      <ul class="mt-2 flex flex-wrap">
+        {
+          [...Array(10)].map(() => {
+            return <li class="p-6">道家学说是如何跟</li>;
+          })
+        }
+      </ul>
+    </div>
+  </section>
 </MainLayout>
