--- a/src/components/header/Header.astro
+++ b/src/components/header/Header.astro
@@ -48,7 +48,7 @@ const { pathname } = Astro.url;
     <nav>
       <ul class="flex justify-end space-x-2">
         <li>
-          <a href="#">登录</a>
+          <a href="/login">登录</a>
         </li>
         <li>
           <a href="#">注册</a>
