feat: search page structure

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -22,3 +22,12 @@ import Header from "@components/header/Header.astro";
     <Footer />
   </body>
 </html>
+
+<style is:global>
+  select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    text-indent: 1px;
+    text-overflow: "";
+  }
+</style>
